更换shader，去除黑透

--- a/PluginModules/RotationAlbumPlugin/Resources/html/index.html
+++ b/PluginModules/RotationAlbumPlugin/Resources/html/index.html
@@ -13,13 +13,14 @@
         margin: 0 auto;
 	    padding: 0;
         overflow: hidden;
+	      background: transparent;
       }
       .container {
         width: 100%;
         height: 100%;
         margin: 0 auto;
         padding-top: 18%;
-	      background-color: #000000;
+	      background: transparent;
       }
     </style>
   </head>
