--- a/PluginModules/VirtualCatPlugin/Resources/html/index.html
+++ b/PluginModules/VirtualCatPlugin/Resources/html/index.html
@@ -39,7 +39,7 @@
 <style>
 body {
   font-family: Monospace;
-  background-color: black;
+	background: transparent;
   margin: 0 auto;
   overflow: hidden;
 }
